# fauxput

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  justfile  release-plz.toml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
contrib/: README.md  sunshine-apps.json.example  sunshine-fauxput-down.sh  sunshine-fauxput-up.sh
dev/: README.md  fedora-gnome.yaml  fedora-sway.yaml  justfile
dev/fedora-gnome/: README.md  cloud-init.yaml
docs/: book.toml
docs/src/: SUMMARY.md  api.md  introduction.md  kernel-dependency.md  streaming-setup.md  troubleshooting.md
docs/src/snippets/: Makefile  dkms.conf  vkms_oot_shim.h
packaging/arch/: PKGBUILD  fauxput.install
packaging/arch-bin/: PKGBUILD  fauxput.install
src/: backend.rs  compositor.rs  edid.rs  error.rs  lib.rs  lifecycle.rs  main.rs  state.rs
src/backend/: configfs_vkms.rs
src/compositor/: gnome.rs  kde.rs  wayland.rs
src/compositor/gnome/: display_config.rs
src/edid/: timing.rs
