[package]
name = "fauxput"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bdelwood/fauxput"
rust-version = "1.94"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
enum-as-inner = "0.7.0"
env_logger = "0.11.10"
indexmap = "2.14.0"
libc = "0.2.186"
log = "0.4.29"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
# 0.2.0 on crates.io is missing pub re-exports
# (EdidDetailedTimingPixelClock) that the EdidDescriptorDetailedTiming builder requires
# TODO: pin to released version when this is fixed
redid = { git = "https://github.com/mripard/redid", rev = "4956848250954bafb57857fa5455a34563cb61cb" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
wayland-client = "0.31.14"
wayland-protocols-plasma = { version = "0.3.12", features = ["client"] }

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3.33"

[dev-dependencies]
tempfile = "3"

# Override the published `wayland-protocols-plasma` to use my fork that has
# the KDE plasma-wayland-protocols submodule bumped to a recent revision
[patch.crates-io]
wayland-client = { git = "https://github.com/bdelwood/wayland-rs", branch = "feat/plasma-protocols-bump" }
wayland-protocols = { git = "https://github.com/bdelwood/wayland-rs", branch = "feat/plasma-protocols-bump" }
wayland-protocols-plasma = { git = "https://github.com/bdelwood/wayland-rs", branch = "feat/plasma-protocols-bump" }
