[package]
name = "fauxput"
version = "0.6.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/bdelwood/fauxput"
rust-version = "1.94"
keywords = ["wayland", "vkms", "virtual-display", "kde", "sunshine"]
categories = ["command-line-utilities", "os::linux-apis", "graphics"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "3"
dialoguer = "0.12"
enum-as-inner = "0.7"
colored = "3"
env_logger = "0.11"
indexmap = "2"
libc = "0.2"
log = "0.4"
rustix = { version = "1", features = ["event"] }
# Pinned to my fork which includes HDR.
# TODO: switch back to repo once the PR merges
# TODO: switch to crates.io when HDR + missing EdidDetailedTimingPixelClock re-export are in a release
redid = { git = "https://github.com/bdelwood/redid", branch = "feat/hdr-metadata" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
tempfile = "3"
thiserror = "2"
wayland-client = "0.31"
wayland-protocols-plasma = { version = "0.3", features = [
    "client",
], optional = true }
zbus = { version = "5.15.0", optional = true }

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"

[features]
default = ["kde", "gnome"]
gnome = ["dep:zbus"]
kde = ["dep:wayland-protocols-plasma"]

# Override the published `wayland-protocols-plasma` to use my fork that has
# the KDE plasma-wayland-protocols submodule bumped to a recent revision
[patch.crates-io]
wayland-client = { git = "https://github.com/bdelwood/wayland-rs", branch = "feat/plasma-protocols-bump" }
wayland-protocols = { git = "https://github.com/bdelwood/wayland-rs", branch = "feat/plasma-protocols-bump" }
wayland-protocols-plasma = { git = "https://github.com/bdelwood/wayland-rs", branch = "feat/plasma-protocols-bump" }
